--- a/WebPortfolio.csproj
+++ b/WebPortfolio.csproj
@@ -94,6 +94,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="img\magic8ball.JPG" />
+    <Content Include="img\profile-cropped.jpg" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
